@@ -5,3 +5,35 @@ perl:
   - "5.14"
   - "5.12"
   - "5.10"
+
+before_install:
+
+   # Prevent "Please tell me who you are" errors for certain DZIL configs
+
+   - git config --global user.name "TravisCI"
+
+
+
+install:
+
+   # Deal with all of the DZIL dependancies, quickly and quietly
+
+   - cpanm --quiet --notest --skip-satisfied Dist::Zilla
+
+   # Hack to getting the latest Test::Kwalitee
+
+   - cpanm --quiet --notest Test::Kwalitee
+
+   - dzil authordeps | grep -vP '[^\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest --skip-satisfied
+
+   - dzil listdeps --author | cpanm --quiet --notest --skip-satisfied
+
+   - export RELEASE_TESTING=1 AUTOMATED_TESTING=1 AUTHOR_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
+
+   - dzil listdeps | grep -vP '[^\w:]' | cpanm --quiet
+
+
+
+script:
+
+   - dzil smoke --release --author
