@@ -1,0 +1,38 @@
+name    = Perl-Critic-Policy-logicLAB-ModuleBlacklist
+author  = Jonas B. Nielsen <jonasbn@cpan.org>
+license = Artistic_2_0
+copyright_holder = Jonas B. Nielsen
+
+[@Basic]
+
+[GitHub::Meta]
+
+[VersionFromModule]
+
+[ExtraTests]
+
+[Test::Perl::Critic]
+
+[PodCoverageTests]
+
+[PodSyntaxTests]
+
+[Test::Kwalitee]
+
+[Test::Compile]
+fail_on_warning = none
+
+[Test::CPAN::Changes]
+
+[Prereqs]
+Perl::Critic::Policy = 0
+Perl::Critic::Utils  = 0
+perl                 = 5.008
+Carp                 = 0
+Data::Dumper         = 0
+Test::Perl::Critic   = 0
+
+[MetaResources]
+repository.web = https://github.com/jonasbn/Perl-Critic-Policy-logicLAB-ModuleBlacklist
+repository.url = https://github.com/jonasbn/Perl-Critic-Policy-logicLAB-ModuleBlacklist.git
+repository.type = git
