@@ -1,9 +1,0 @@
-# $Id$
-
-use strict;
-use warnings;
-
-use Test::More;
-eval 'use Test::CPAN::Changes';
-plan skip_all => 'Test::CPAN::Changes required for this test' if $@;
-changes_ok();
