@@ -1,5 +1,10 @@
 Changes file for Perl::Critic::Policy::logicLAB::ModuleBlacklist
 
+HEAD
+
+- Migrating build system from Module::Build to Dist::Zilla
+
+
 0.02 2014-08-25 bug fix release, update recommended
 
 - Addressed issue #1. The policy did not ignore 'no' use statements, which are
